<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">eFinder</string>
<string name="title_map">Map</string>
<string name="title_search">Search</string>
<string name="title_favorites">Favorites</string>
<string name="title_admin">Admin</string>
<string name="title_preference">Properties</string>
<string name="title_activity_login">LoginActivity</string>
<string name="prompt_email">Email</string>
<string name="prompt_password">Password</string>
<string name="action_sign_in">Log In or Register</string>
<string name="action_sign_in_short">Login</string>
<string name="welcome">"Welcome!"</string>
<string name="invalid_username">Not a valid username</string>
<string name="login_failed">Login Failed :-(</string>
<string name="email">Email</string>
<string name="hint_password">Password</string>
<string name="btn_forgot_password">Forgot Password?</string>
<string name="btn_link_to_login">Already Registered?</string>
<string name="title_activity_reset_password">ResetPasswordActivity</string>
<string name="hint_email">Email</string>
<string name="btn_login">Login</string>
<string name="btn_link_to_register">Not a member yet?</string>
<string name="minimum_password">Password must be at least 6 characters long!</string>
<string name="auth_failed">Authentication failed. Check your e-mail and password!</string>
<string name="btn_sign_out">Logout</string>
<string name="title_activity_maps">MapsActivity</string>
<string name="headline_admin_rights">Administrator Rights</string>
<string name="ON">ON</string>
<string name="OFF">AFF</string>
<string name="text_admin_rights">Authorizes you to access the administrator functions</string>
<string name="firebase_link">https://efinder-1640105181864-default-rtdb.europe-west1.firebasedatabase.app/</string>
<string name="addFavorite_string">Add to favorites</string>
<string name="addDefect_string">Report a defect</string>
<string name="admin_access_denied">You have to be an administrator to use report repairs</string>
<string name="report_repair">Report Repair</string>
<string name="defect_description">Describe the repair</string>
    <string name="use_station">use this station</string>
    <string name="being_used">"used: "</string>
    <string name="invalid_password">password has to be longer than 5 characters</string>
    <string name="power_station">power: </string>
    <string name="station_location">"location: "</string>
    <string name="station_search">"search"</string>
    <string name="search_in_area">Search in area</string>
    <string name="change_location">Change location</string>
    <string name="use_this_station">Use this station</string>
    <string name="leave_station">Leave station</string>
    <string name="state">"state: "</string>
    <string name="district">"district: "</string>
    <string name="street">"street: "</string>
    <string name="module_type">"module type: "</string>
    <string name="connection_number">"connections: "</string>
    <string name="used"> used  </string>
    <string name="not_used"> not used </string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="installation_date">"Installationdate: "</string>
    <string name="connection_type">"Connectiontype "</string>
    <string name="power">"Power "</string>
    <string name="snackbar_details">show details</string>
    <string name="snackbar_used">being used</string>
    <string name="snackbar_notused">available</string>
    <string name="address">"address: "</string>
    <string name="remove_favorite">Remove favorite</string>
</resources>