<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/location_on"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/star"
        android:title="@string/title_favorites"/>

    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/assignment"
        android:title="@string/title_admin"/>

    <item
        android:id="@+id/navigation_preference"
        android:icon="@drawable/settings"
        android:title="@string/title_preference"/>

</menu>