<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_blue"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/ortInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="200dp"
        android:hint="@string/station_location"
        android:padding="8dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/being_used" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/statusInput"
        />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:text="@string/station_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
